[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resume.png" type="Texture" id=1]
[ext_resource path="res://Quit.png" type="Texture" id=2]
[ext_resource path="res://PauseScreen.gd" type="Script" id=3]
[ext_resource path="res://neuropol x rg.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 5 )

[node name="PauseScreen" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
margin_right = 1400.0
margin_bottom = 730.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1400.0
margin_bottom = 730.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1400.0
margin_bottom = 730.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 475.0
margin_top = 253.0
margin_right = 925.0
margin_bottom = 476.0

[node name="TextureButton01" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.247059 )
margin_right = 450.0
margin_bottom = 107.0
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 1 )

[node name="TextureButton02" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.290196 )
margin_top = 111.0
margin_right = 450.0
margin_bottom = 223.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="Button" type="TextureButton" parent="."]
modulate = Color( 0.121569, 0.0784314, 0.0784314, 0.207843 )
margin_right = 225.0
margin_bottom = 93.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
margin_left = 14.2159
margin_top = 14.2159
margin_right = 190.216
margin_bottom = 75.2159
custom_fonts/font = SubResource( 1 )
text = "Back "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton01" to="." method="_on_TextureButton01_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton02" to="." method="_on_TextureButton02_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
